fixed border radius on safari

--- a/styles/main.css
+++ b/styles/main.css
@@ -1938,7 +1938,7 @@ div.part-3:before {
     text-align: center;
     background-color: #CCD7E0;
     transition: all 0.5s;
-    /* border-radius: 50px; */
+    border-radius: 50px;
 }
 
 .service-content {
